tests/build/cases/widget_new/error_in_when_expr2.stderr
error: expected a when block expr and properties
 --> cases/widget_new/error_in_when_expr2.rs:9:9
  |
9 |         }
  |         ^
