tests/build/cases/widget_new/error_in_when_expr2.rs
use zero_ui::prelude::*;

fn main() {
    let _scope = App::minimal();
    let _ = Wgt! {
        margin = 0;
        when *# {
            margin = 10;
        }
    };
}
